# python-card-me

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  setup.py
card_me/: __init__.py  base.py  change_tz.py  hcalendar.py  icalendar.py  ics_diff.py  vcard.py  win32tz.py
tests/: test_lib.py
tests/files/: recurrence.ics
