[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0"]

[project]
name = "card-me"
description = "Card-Me parses iCalendar and vCard files into Python data structures."
version = "0.9.4"
authors = [{name = "Tim Baxter"}, {name = "Jeffrey Harris"}]
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Text Processing",
]
requires-python = ">=3.11"
dependencies = [
  "python-dateutil",
  "six",
]

[project.optional-dependencies]
dev = [
  "flake8",
  "mypy",
  "pytest",
  "pytest-cov",
  "vulture",
]

[project.urls]
Repository = "https://github.com/UbiCastTeam/python-card-me"

[tool.setuptools]
packages = ["card_me"]
include-package-data = false

[tool.pytest.ini_options]
addopts = "--verbose --tb=native --color=yes"
log_date_format = "%H:%M:%S"
log_format = "%(asctime)s.%(msecs)03d %(name)s %(levelname)s %(message)s"
log_level = "DEBUG"
testpaths = "tests/"

[tool.coverage.run]
source_dirs = ["card_me"]
